# runtime_stm32f2_reset

./: CMakeLists.txt  CMakePresets.json
cmake/: install-rules.cmake  postbuild.cmake
src/: platform.c  stm32f2_hal.c
src/CMSIS/core/: cmsis_armcc.h
src/CMSIS/startup_armcc/: startup_stm32f217xx.S  stm32f215ret6.sct
src/CMSIS/startup_gnu/: newlib_stubs.c  startup_stm32f2.S  stm32f215ret6.ld
toolchains/: armcc-arm-unknown-none-eabi-host-win64.toolchain
